WindGroup Dev/src/objects/Mobile_Module__c.object
<CustomObject>
    <fields>
        <fullName>App__c</fullName>
        <label>App</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>App</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Icon_Image__c</fullName>
        <formula>IF( ISBLANK( Icon_Url__c ) ,&quot;&quot;, IMAGE(Icon_Url__c , &quot;Icon&quot;, 75,75) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Icon Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Icon_Url__c</fullName>
        <label>Icon Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Mobile_Module__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Mobile Module</label>
        <referenceTo>Mobile_Module__c</referenceTo>
        <relationshipLabel>Mobile Modules</relationshipLabel>
        <relationshipName>Mobile_Modules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Process_Type__c</fullName>
        <label>Process Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Handover</fullName>
                </value>
                <value>
                    <fullName>Takeover</fullName>
                </value>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>Daily Check</fullName>
                </value>
                <value>
                    <fullName>Toilet Cleanliness</fullName>
                </value>
                <value>
                    <fullName>iRequest</fullName>
                </value>
                <value>
                    <fullName>iTask</fullName>
                </value>
                <value>
                    <fullName>System Alert</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>S_N__c</fullName>
        <label>S/N</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shift_Assignment_del__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shift Assignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Checklist_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Sub Process Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Process_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Checklist_Types</valueSetName>
        </valueSet>
    </fields>
    <label>Mobile Module</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>App__c</columns>
        <columns>S_N__c</columns>
        <columns>Process_Type__c</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Icon_Image__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Mobile Module Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mobile Modules</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>